update product sizes + images